--- a/index.html
+++ b/index.html
@@ -42,9 +42,34 @@ Datos:
 </br>
 <div id="Dashboard">
 <a href="https://app.powerbi.com/links/KK5TEIw1jp?ctid=02674ef9-5c2c-47d0-b2bc-595a784dda00&pbi_source=linkShare"> Link Dashboard PowerBI </a>
-<iframe src="Netflix_TrabajoPractico.pdf" width="100%" height="500px">
-</iframe>
+
+<iframe title="Netflix_TrabajoPractico" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=efff32cc-dcb6-4f97-96ac-ab136c1cf071&autoAuth=true&ctid=02674ef9-5c2c-47d0-b2bc-595a784dda00" frameborder="0" allowFullScreen="true"></iframe>
+
 </div>
+
+<h2>Conclusiones</h2>
+En definitiva si vemos la gráfica de la distribución de los precios vs la biblioteca ofertada del país regionalizado podemos ver que hay un comportamiento de la oferta y el precio según la región. Lo que hace que directamente ciertas regiones sean más económicas que otras, esto refleja que en el esquema de precios se tienen en cuenta la capacidad económica de la población del país muy similar al costo macdonalds.
+Adicionalmente podemos ver que si y solo si deberíamos decidir quedarnos con netflix al usar la subscripción premium y solo pagamos una quinta parte de ella junto con demás personas, esto significaría un ahorro inmenso vs la subscripción basic.
+En mi caso, Colombia si pagara basic serían 5USD y premium 12USD total pero la 5ta parte serían solo 2.4 USD
+</br>
+</br>
+
+¿Netflix es más costoso en mi país? En mi caso, Colombia no puede responderse solamente revisando el costo por país y usar de referencía el top 10 más costosos. El beneficio tiene ligado otros comportamiento como la relación del precio con la cantidad de peliculas ofertadas. Así que ese benefecio ya está correlacionado con el precio.</br>
+
+Por lo que países que tienen mayor precio, tienen más beneficio (En diversidad de biblioteca ofertada)
+</br>
+</br>
+
+Si vale la pena usar Netflix siempre y cuando dividas tus gastos de subscripción entre todos los beneficiarios!. Basic demuestra ser una palanca donde más ingresos obtiene netflix, menos frecuencia porque es solo una persona.
+</br>
+
+<h2>Recomendaciones</h2>
+</br>
+
+Para concluir mejor la decisión es necesario cruzar información de los países como GDP o Ingresos promedios de un trabajador, también sería útil tener información al contenido ofertado por país o métricas de calidad del contenido ofertado debido a que nuestro beneficio calculado está basado simplemente en la cantidad de películas o shows de la biblioteca.
+</br>
+</br>
+</br>
 
 <div id="Fuentes">
 Fuentes:
