--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+Nombre: Miguel Eugenio Jurado García <br />
+URL:
+<a href="https://js-hgrqu1.stackblitz.io/">https://js-hgrqu1.stackblitz.io/</a
+><br />
+Mi perfil de Github:
+<a href="https://github.com/migeruj">https://github.com/migeruj</a> <br><br/> Github del
+proyecto:
+<a href="https://github.com/migeruj/TrabajoPractico_VisualizacionDatos"
+  >https://github.com/migeruj/TrabajoPractico_VisualizacionDatos</a
+>
+
 <h1>¿Netflix es costoso en mi país?</h1>
 
 </br>
@@ -29,15 +40,7 @@ En el dashboard he creado 3 componentes que pueden responder a esta pregunta.
 
 </br>
 </br>
-Datos: 
-</br>
 
-<a href="https://beebom.com/how-much-netflix-costs-each-country-worldwide/">Estudio base sobre precios de netflix por país</a>
-</br>
-<a href="https://docs.google.com/spreadsheets/d/1qZBwnIGDsw5tl7_MypxS1NuWAO-PbMypf4qsSTBfyYo/edit#gid=0">Google Spreadsheet de Datos usados</a>
-
-
-</br>
 
 </br>
 <div id="Dashboard">
@@ -75,4 +78,15 @@ Para concluir mejor la decisión es necesario cruzar información de los países
 Fuentes:
 
 <a href="https://estudiosestadisticos.ucm.es/data/cont/docs/12-2018-06-26-Cert11-esosenior.pdf">Estudio estadístico mediante encuesta sobre uso de Netflix:</a>
+</br>
+
+Datos: 
+</br>
+
+<a href="https://beebom.com/how-much-netflix-costs-each-country-worldwide/">Estudio base sobre precios de netflix por país</a>
+</br>
+<a href="https://docs.google.com/spreadsheets/d/1qZBwnIGDsw5tl7_MypxS1NuWAO-PbMypf4qsSTBfyYo/edit#gid=0">Google Spreadsheet de Datos usados</a>
+
+
+</br>
 </div>
